Upgraded to Swift 2.0 and ready for iOS 9!

--- a/Marguerite/Localizable.strings
+++ b/Marguerite/Localizable.strings
@@ -33,7 +33,7 @@
 
 "About Title" = "About Marguerite App";
 "Features Header" = "More features coming soon";
-"Features Footer" = "The full bus app will be released this fall when the Marguerite system upgrade is complete. Until then, please enjoy the live map view.";
+"Features Footer" = "Detailed stop and route information will be released when the Marguerite system upgrade is complete.";
 
 "Credits Header" = "Credits";
 "Updated Version Title" = "Updated Version";
