Changed about view controller language

--- a/Marguerite/Localizable.strings
+++ b/Marguerite/Localizable.strings
@@ -40,8 +40,7 @@
 "Misc. Images Title" = "Misc. Images";
 
 "Contact Marguerite Header" = "Contact Marguerite";
-"Main Office Title" = "Main Office";
-"Lost and Found Title" = "Lost and Found";
+"Main Office Title" = "Phone";
 "Website Title" = "Website";
 
 "Open-source Header" = "Open-source";
